--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -89,7 +89,7 @@ h3 a:hover{
   text-decoration: none;
 }
 h4{
-  margin-left: 20px;
+  margin-left: 15px;
 }
 .sub-header{
   position: relative;
@@ -104,6 +104,25 @@ h4{
 ul{
   margin-left: 40px;
   font-size: 12px;
+}
+ul.output,
+ul.output li{
+  margin-left: 0;
+  list-style-type: none;
+}
+ul.output ul{
+  margin-left: 15px;;
+}
+.code{
+    font-family: monospace;
+    padding: 10px;
+    margin: 10px;
+    color: #333;
+    word-break: break-all;
+    word-wrap: break-word;
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 .info-section{
   margin:75px 0 250px;
@@ -120,8 +139,11 @@ ul{
 .section{
   margin-bottom:150px;
 }
-.sub-section{
-  margin-bottom:50px;
+.section .section{
+  margin-bottom:75px;
+}
+.section .section .section{
+  margin-bottom:35px;
 }
 .caption{
   position: absolute;
