--- a/includes/css/main.css
+++ b/includes/css/main.css
@@ -77,9 +77,6 @@ h2{
   color: #fbf7f5;
   background-color: #444;
 }
-h3{
-  padding-left:15px;
-}
 h3 a{
   margin-left:10px;
   font-size: 10px;
@@ -88,7 +85,8 @@ h3 a{
 h3 a:hover{
   text-decoration: none;
 }
-h4{
+.resume h3,
+.resume h4{
   margin-left: 15px;
 }
 .sub-header{
@@ -111,7 +109,7 @@ ul{
 .info-section .copy{
   margin-top: 25px;
 }
-.info-section .preview img{
+.rounded img{
   border-radius: 10%;
 }
 .circle{
@@ -124,7 +122,10 @@ ul{
   margin-bottom:75px;
 }
 .section .section .section{
-  margin-bottom:35px;
+  margin-bottom:50px;
+}
+.section .section .section .section{
+  margin-bottom:25px;
 }
 .caption{
   position: absolute;
